--- a/vs-satzung/document.core.tex
+++ b/vs-satzung/document.core.tex
@@ -1,10 +1,11 @@
+\jurtitle[Organisationssatzung]{Organisationssatzung \\ der Verfassten Studierendenschaft \\ des Karlsruher Instituts für Technologie (KIT)}
+
+\begin{jurdoc}
+\setcounter{juratoclevel}{2}
+
 %
 % STUDIERENDENSCHAFT
 %
-
-\begin{contract}
-\setcounter{Paragraph}{0}
-
 \jursection{Studierendenschaft}
 \Paragraph{title=Studierendenschaft}
 Die immatrikulierten Studierenden einschließlich der immatrikulierten Doktorandinnen des Karlsruher Instituts für Technologie (KIT) (Mitglieder) bilden gemäß § 65 Absatz 1 LHG die Studierendenschaft. Sie ist eine rechtsfähige Körperschaft des öffentlichen Rechts und als solche eine Gliedkörperschaft des KIT. Die Studierendenschaft arbeitet auf demokratischer Grundlage und wahrt nach den verfassungsrechtlichen Grundsätzen die weltanschauliche, religiöse und parteipolitische Neutralität.
@@ -575,4 +576,4 @@ Als Anzahl der abgegebenen Stimmen gilt die Summe aus Ja-Stimmen, Nein-Stimmen, 
 Diese Satzung tritt am Tage nach ihrer Bekanntmachung in den Amtlichen Bekanntmachungen des KIT in Kraft.
 
 
-\end{contract}
+\end{jurdoc}
