--- a/vs-uebergangsbestimmungen/document.core.tex
+++ b/vs-uebergangsbestimmungen/document.core.tex
@@ -1,6 +1,6 @@
-\begin{contract}
-\setcounter{Paragraph}{0}
-\setcounter{juratoclevel}{1}
+\jurtitle{Übergangsbestimmungen}
+
+\begin{jurdoc}
 
 \Paragraph{title={Dauer der ersten Amtsperiode}}\label{amtsperiode}
 Die Amtsperiode des ersten Studierendenparlaments beginnt am Tag nach der Feststellung des Wahlergebnisses durch das Präsidium des KIT und endet abweichend von § 16 Absatz 3 der Organisationssatzung am 30. September 2014.
@@ -46,4 +46,4 @@ Das Studierendenparlament soll unverzüglich nach seiner Konstituierung spätest
 
 Die Fachschaften sollen unverzüglich nach Konstituierung des Fachschaftsvorstands spätestens aber bis zum 31.12.2013 eine Fachschaftsordnung erlassen.
 
-\end{contract}
+\end{jurdoc}
