--- a/wahl-abstimmungsordnung/document.core.tex
+++ b/wahl-abstimmungsordnung/document.core.tex
@@ -1,6 +1,6 @@
-\begin{contract}
-\setcounter{Paragraph}{0}
-\setcounter{juratoclevel}{1}
+\jurtitle[Wahl- und Abstimmungsordnung]{Wahl- und Abstimmungsordnung \\ der Verfassten Studierendenschaft \\ des Karlsruher Instituts für Technologie (KIT)}
+
+\begin{jurdoc}
 
 \Paragraph{title={Geltungsbereich}}\label{wahl:geltungsbereich}
 Diese Satzung regelt die Wahlen zum Studierendenparlament und den Fachschaftsvorständen, die Urabstimmung, sowie die Wahlen zu weiteren Organen der Studierendenschaft, sofern eine Satzung dies vorsieht.
@@ -375,7 +375,6 @@ Jedes Mitglied der Studierendenschaft kann die Wahl nach Maßgabe des \ref{grund
 \Paragraph{title={Berechnung der Fristen}}\label{wahl:fristen}
 Bei der Berechnung der Fristen werden nur Tage gezählt, die in der vom KIT-Senat beschlossenen Vorlesungszeit liegen.
 
-Fällt der letzte Tag einer Frist auf einen vorlesungsfreien Tag, so tritt an dessen Stelle der vorherige Vorlesungstag .
+Fällt der letzte Tag einer Frist auf einen vorlesungsfreien Tag, so tritt an dessen Stelle der vorherige Vorlesungstag.
 
-
-\end{contract}
+\end{jurdoc}
