--- a/einzeln.grundgeruest.tex
+++ b/einzeln.grundgeruest.tex
@@ -5,7 +5,7 @@
 	a4paper,
 	parskip=half,
 	numbers=noenddot,
-	titlepage,
+%	titlepage,
 %	twoside,  % Benutze diese Optionen für Booklet-Layout
 %	BCOR=2mm, % Auskommentiert für bessere Bildschirmdarstellung
 	DIV=12,
@@ -38,12 +38,10 @@
 % Setze Abstand zwischen Spalten
 \setlength{\columnsep}{5mm}
 
-% Setze Titel des Dokuments und Abschnitt (wenn vorhanden) als Kopfzeile
-\usepackage{scrlayer-scrpage}
-\pagestyle{scrheadings}
-\automark[part]{part}
-\automark*[section]{}
+% Für leichteres Programmieren
+\usepackage{xifthen}
 
+% Großbuchstaben für die Untergliederungen
 \renewcommand{\thesection}{\Alph{section}}
 
 % Setze einen kleinen Abstand \, zwischen Zahl und Buchstabe bei Paragraphen
@@ -68,9 +66,6 @@
 % wenn man doch wieder scrbook und chapters will)
 \newcommand{\jursection}[1]{\parnumberfalse\section{#1}\parnumbertrue}
 
-\title{Organisationssatzung \\ der Verfassten Studierendenschaft \\ des Karlsruher Instituts für Technologie (KIT)}
-\author{}
-\date{}
 
 \usepackage[pdfusetitle, pdfborder={0 0 0}]{hyperref}
 
@@ -80,33 +75,46 @@
 \@addtoreset{section}{part}
 \makeatother
 
+\author{}
+\date{}
+
+
+% Mit diesem Kommando wird der Dokumenttitel gesetzt. Geht nicht das in dem Environment zu machen weil man da drin nicht das \begin{document} gesetzt werden kann und der Titel schon in der Präambel gesetzt werden muss
+\newcommand{\jurtitle}[2][]{
+\ifthenelse{\isempty{#1}}{\newcommand{\shorttitle}{#2}}{\newcommand{\shorttitle}{#1}}
+
+\title{#2}
+
+% Setze Titel des Dokuments als Kopfzeile
+\usepackage{scrlayer-scrpage}
+\pagestyle{scrheadings}
+\cohead{\shorttitle}
+
 \begin{document}
 
-
-
 \maketitle
-
-% tableofcontents von scrartcl beginnt direkt => füge Vakatseiten ein
-\cleardoublepage
 
 \begin{multicols}{2}
 \tableofcontents
 \end{multicols}
 
 \bigskip
-
-Aufgrund von § 65 a Absatz 1 des Gesetzes über die Hochschulen in Baden-Württemberg (Landeshochschulgesetz -- LHG) in der Fassung vom 01. Januar 2005 (GBl. S. 1 f.), zuletzt geändert durch Artikel 2 des Gesetzes zur Einführung einer Verfassten Studierendenschaft und zur Stärkung der akademischen Weiterbildung (Verfasste-Studierendenschafts-Gesetz -- VerfStudG) in der Fassung vom 10. Juli 2012 (GBl. S. 457 ff.) hat die Studierendenschaft des KIT die nachstehende Organisationssatzung beschlossen.
-
-Im Folgenden wird aus Gründen der besseren Lesbarkeit ausschließlich die weibliche Form verwendet. Dabei ist jede andere Form impliziert. Die Geschlechtsdefinition obliegt jeder Person selbst.
+}% Ende von \jurtitle
 
 
+% Diese Umgebung umschließt das eigentliche Dokument
+\newenvironment{jurdoc}{% begin{jurdoc}
+\begin{multicols}{2}%
+\begin{contract}%
+\setcounter{Paragraph}{0}%
+%
+}{% end{jurdoc}
+\end{contract}%
+\end{multicols}%
+}% Ende von jurdoc
 
 
-\part[Organisationssatzung]{Organisationssatzung \\ der Verfassten Studierendenschaft \\ des Karlsruher Instituts für Technologie (KIT)}
-
-\begin{multicols}{2}
 \input{document.core.tex}
-\end{multicols}
 
 
 %%% Impressum %%%
