--- a/einzeln.grundgeruest.tex
+++ b/einzeln.grundgeruest.tex
@@ -117,19 +117,5 @@
 \input{document.core.tex}
 
 
-%%% Impressum %%%
-\vspace*{\fill}
-\section*{Impressum}
-\begin{tabular}{rl}
-	Herausgeber & AStA am KIT \\
-	Telefon & 0721/608-48460 \\
-	Web & \url{www.asta-kit.de} \\
-	E-Mail & \href{mailto:info@usta.de}{info@usta.de}\\
-	V.i.S.d.P. & Vera Schumacher\\
-	Druck & Studierenden Service Verein (SSV)\\
-	Nachdruck & 150 Exemplare\\
-	Stand: & 11.02.2013 (Veröffentlichungsdatum in den\\
-& amtlichen Bekanntmachungen des KIT)
-\end{tabular}
-
+\input{../impressum.tex}
 \end{document}
