--- a/impressum.tex
+++ b/impressum.tex
@@ -5,10 +5,8 @@
 	Herausgeber & AStA am KIT \\
 	Telefon & 0721/608-48460 \\
 	Web & \url{www.asta-kit.de} \\
-	E-Mail & \href{mailto:info@usta.de}{info@usta.de}\\
-	V.i.S.d.P. & Vera Schumacher\\
-	Druck & Studierenden Service Verein (SSV)\\
-	Nachdruck & 150 Exemplare\\
-	Stand & 11.02.2013 (Veröffentlichungsdatum in den\\
-& amtlichen Bekanntmachungen des KIT)
+	E-Mail & \href{mailto:info@asta-kit.de}{info@asta-kit.de}\\
+	V.i.S.d.P. & Johannes Janosovits\\
+	Druck & Studierenden Service Verein Karlsruhe e.V. (SSV)\\
+	Nachdruck & 150 Exemplare
 \end{tabular}
