--- a/vs-uebergangsbestimmungen/document.core.tex
+++ b/vs-uebergangsbestimmungen/document.core.tex
@@ -1,3 +1,9 @@
+\stupadate{22.01.2013}
+\publishdate{04.02.2013}
+\jurchanges{
+	\item Amtliche Bekanntmachung 2013 KIT 004 vom 04.12.2013
+}
+
 \jurtitle{Übergangsbestimmungen}
 
 \begin{jurdoc}
