--- a/wahl-abstimmungsordnung/document.core.tex
+++ b/wahl-abstimmungsordnung/document.core.tex
@@ -1,3 +1,9 @@
+\stupadate{22.01.2013}
+\publishdate{04.02.2013}
+\jurchanges{
+	\item Amtliche Bekanntmachung 2013 KIT 004 vom 04.12.2013
+}
+
 \jurtitle[Wahl- und Abstimmungsordnung]{Wahl- und Abstimmungsordnung \\ der Verfassten Studierendenschaft \\ des Karlsruher Instituts für Technologie (KIT)}
 
 \begin{jurdoc}
