Überflüssige Leerzeichen in Titeln entfernt

--- a/gesamt.tex
+++ b/gesamt.tex
@@ -72,7 +72,7 @@
 % wenn man doch wieder scrbook und chapters will)
 \newcommand{\jursection}[1]{\parnumberfalse\section{#1}\parnumbertrue}
 
-\title{Organisationssatzung \\ der Verfassten Studierendenschaft \\ des Karlsruher Instituts für Technologie (KIT)}
+\title{Organisationssatzung und zentrale Satzungen\\der Verfassten Studierendenschaft\\des Karlsruher Instituts für Technologie (KIT)}
 \author{}
 \date{Stand: 4. Februar 2013\\(amtliche Bekanntmachung)}
 
