Referenzen auf die Organisationssatzung in der Wahlordnung müssen ausgeschrieben werden damit das Einzeldokument funktioniert

--- a/wahl-abstimmungsordnung/document.core.tex
+++ b/wahl-abstimmungsordnung/document.core.tex
@@ -276,7 +276,7 @@ Zu jeder Urne ist ein Urnenbuch zu führen. Dieses wird vom Wahlausschuss ausgeg
 Die Urnen dürfen das Gelände des KIT nicht verlassen; Ausnahmen regelt der Wahlausschuss. Erstreckt sich eine Wahl oder Abstimmung über mehrere Tage, so sind die Urnen über die Nacht von 20:00 bis 7:00 Uhr unter sicherer Verwahrung zu halten. In dieser Zeit ist keine Wahlhandlung zulässig.
 
 \Paragraph{title={ Wahlhelferinnen }}\label{wahl:wahlhelferinnen}
-Der Wahlausschuss bestellt Wahlhelferinnen zur Durchführung der Wahl. Der Wahlausschuss belehrt die Wahlhelferinnen über ihre Pflichten. Der Wahlausschuss kann die Bestellung und Belehrung von Wahlhelferinnen an die Wahlleiterinnen gemäß \ref{grundsaetze:wahlen:wahlausschuss} delegieren.
+Der Wahlausschuss bestellt Wahlhelferinnen zur Durchführung der Wahl. Der Wahlausschuss belehrt die Wahlhelferinnen über ihre Pflichten. Der Wahlausschuss kann die Bestellung und Belehrung von Wahlhelferinnen an die Wahlleiterinnen gemäß §~40 Absatz~2 delegieren.
 
 Die Wahlhelferinnen nehmen ihr Amt unparteiisch und gewissenhaft wahr. Sie enthalten sich während der Ausübung ihres Amtes jeder parteilichen Betätigung. Dazu gehört auch das Tragen von Parteiabzeichen und "~parolen.
 
@@ -337,7 +337,7 @@ Kandidatinnen, auf die kein Mandat entfällt, sind in der Reihenfolge der von ih
 Entfallen bei der Wahl zum Studierendenparlament auf einen Wahlvorschlag mehr Sitze als Kandidatinnen vorhanden sind, so bleiben die überzähligen Sitze unbesetzt.
 
 \Paragraph{title={ Besetzung der Fachschaftsvorstände }}\label{wahl:fsvorstaende}
-Die Anzahl der Fachschaftssprecherinnen wird gemäß \ref{fs:vorstand:anzahl} der Organisationssatzung durch die Fachschaftsordnungen geregelt. Die Kandidatinnen mit den meisten Stimmen werden Fachschaftssprecherinnen und bilden den Fachschaftsvorstand. 
+Die Anzahl der Fachschaftssprecherinnen wird gemäß §~30 Absatz~3 der Organisationssatzung durch die Fachschaftsordnungen geregelt. Die Kandidatinnen mit den meisten Stimmen werden Fachschaftssprecherinnen und bilden den Fachschaftsvorstand.
 
 Kandidatinnen, welche nicht Teil des Fachschaftsvorstands werden, werden Ersatzleute in der Reihenfolge der von ihnen erziehlten Stimmenanzahl. 
 
@@ -376,7 +376,7 @@ Nach der Feststellung gibt der Wahlausschuss das Wahlergebnis bekannt. Die Bekan
 Der Wahlausschuss benachrichtigt mit der Bekanntmachung des Wahlergebnisses die gewählten Kandidatinnen. 
 
 \Paragraph{title={Wahlanfechtung}}\label{wahl:wahlanfechtung}
-Jedes Mitglied der Studierendenschaft kann die Wahl nach Maßgabe des \ref{grundsaetze:wahlen:wahlanfechtung} der Organisationssatzung anfechten.
+Jedes Mitglied der Studierendenschaft kann die Wahl nach Maßgabe des §~40 Absatz~4 der Organisationssatzung anfechten.
 
 \Paragraph{title={Berechnung der Fristen}}\label{wahl:fristen}
 Bei der Berechnung der Fristen werden nur Tage gezählt, die in der vom KIT-Senat beschlossenen Vorlesungszeit liegen.
