Passe das Template an damit nicht die Defaults überschrieben werden

--- a/document.core.tex
+++ b/document.core.tex
@@ -1,12 +1,12 @@
 % Muster für die Satzungsdokumente
 
-\stupadate{} % Hier trägt man das Datum des Beschlusses im StuPa ein
-\publishdate{} % Hier trägt man das Datum der Bekanntmachung/des Inkrafttreten ein
-\jurchanges{
+%\stupadate{} % Hier trägt man das Datum des Beschlusses im StuPa ein
+%\publishdate{} % Hier trägt man das Datum der Bekanntmachung/des Inkrafttreten ein
+%\jurchanges{
 	% Hier trägt man die Änderungen ein die eingearbeitet wurden
 	%\item Amtliche Bekanntmachung 2013 KIT 004 vom 04.02.2013
 	%\item Amtliche Bekanntmachung 2014 KIT 021 vom 02.05.2014
-}
+%}
 
 % Hier kommt der Titel des Dokuments. In eckigen Klammern falls benötigt ein
 % Kurztitel der dann statt des langen in Kopfzeilen oder im Inhaltsverzeichnis
