Extra-Befehle für die Paragraphentitel eingeführt und Nummerierung im PDF Inhaltsverzeichnis angeschaltet

--- a/document.core.tex
+++ b/document.core.tex
@@ -16,14 +16,14 @@
 % Hier beginnt das eigentliche Dokument
 \begin{jurdoc}
 
-\Paragraph{title={Erster Paragraph}}\label{neues_dokument:erster_paragraph}
+\jurparagraph{Erster Paragraph}\label{neues_dokument:erster_paragraph}
 % Die Labels sind nützlich für Verweise, da kann man dann mit \ref{} drauf verweisen
 Erster Absatz
 
 Zweiter Absatz\label{neues_dokument:erster_paragraph:toller_absatz}
 
 
-\Paragraph{title={Noch ein Paragraph}}\label{neues_dokument:anderer_paragraph}
+\jurparagraph{Noch ein Paragraph}\label{neues_dokument:anderer_paragraph}
 Und hier kommt jetzt ein Verweis auf den ersten Paragraphen \ref{neues_dokument:erster_paragraph} und noch spezieller kann man direkt auf den Absatz verweisen \ref{neues_dokument:erster_paragraph:toller_absatz}.
 
 Dieser Absatz hat jetzt eine Aufzählung:
