--- a/vs-uebergangsbestimmungen/document.core.tex
+++ b/vs-uebergangsbestimmungen/document.core.tex
@@ -8,18 +8,18 @@
 
 \begin{jurdoc}
 
-\Paragraph{title={Dauer der ersten Amtsperiode}}\label{amtsperiode}
+\jurparagraph{Dauer der ersten Amtsperiode}\label{amtsperiode}
 Die Amtsperiode des ersten Studierendenparlaments beginnt am Tag nach der Feststellung des Wahlergebnisses durch das Präsidium des KIT und endet abweichend von § 16 Absatz 3 der Organisationssatzung am 30. September 2014.
 
 Die Amtsperiode der ersten Fachschaftsvorstände beginnt am Tag nach der Feststellung der Wahlergebnisse durch das Präsidium des KIT und endet abweichend von § 30 Absatz 2 der Organisationssatzung am 30. September 2014. Abweichend von Satz 1 kann die Fachschaftsordnung ein früheres Ende der Amtsperiode vorsehen, sofern sie vorsieht, dass der Fachschaftsvorstand aus den studentischen Fakultätsratsmitgliedern besteht.
 
 
-\Paragraph{title={Anzahl der Fachschaftssprecherinnen}}\label{fachschaftssprecher}
+\jurparagraph{Anzahl der Fachschaftssprecherinnen}\label{fachschaftssprecher}
 
 Bis zum in Kraft treten der Fachschaftsordnung entspricht die Anzahl der Fachschaftssprecherinnen der Anzahl der studentischen Mitglieder des Fakultätsrats gemäß §~9 Absatz~5 Nummer~2 der Gemeinsamen Satzung des KIT vom 21.~März~2011 i.V.m. §~9 Absatz~2 Nummer~2 der Grundordnung der ehemaligen Universität Fridericiana zu Karlsruhe (TH) in der Fassung vom 22. Dezember 2008.
 
 
-\Paragraph{title={Für die erste Besetzung der Organe erforderliche Wahlen}}\label{wahlen}
+\jurparagraph{Für die erste Besetzung der Organe erforderliche Wahlen}\label{wahlen}
 
 Abweichend  von § 5 Absatz 2 der Wahl- und Abstimmungsordnung wird der Termin der ersten Wahlen auf Vorschlag der studentischen Senatsmitglieder von der Präsidentin des KIT festgelegt.
 
@@ -38,7 +38,7 @@ Zusätzlich zu den Angaben in  § 11 Absatz 7 der Wahl- und Abstimmungsordnung m
 Die Aufgaben des Ältestenrates  zur Wahlprüfung nimmt ein auf Vorschlag der studentischen Senatsmitglieder von der Präsidentin des KIT bestellter Wahlprüfungsausschuss wahr.
 
 
-\Paragraph{title={Konstituierung der Organe}}\label{konstituierung}
+\jurparagraph{Konstituierung der Organe}\label{konstituierung}
 
 Nach der Feststellung der Wahlergebnisse der ersten Wahl beruft das lebensälteste Mitglied des jeweiligen Organs dieses zur konstituierenden Sitzung ein.
 
@@ -47,7 +47,7 @@ Die Studierendenschaft ist konstituiert, wenn sich das letzte der Organe nach §
 Die Vorsitzende eines Organs teilt dem Vorstand den Zeitpunkt der Konstituierung des Organs mit. Der Vorstand teilt den Zeitpunkt der Konstituierung des letzten Organs nach Absatz 2 dem Präsidium des KIT zur Feststellung und Bekanntmachung mit.
 
 
-\Paragraph{title={Erlass weiterer Satzungen}}
+\jurparagraph{Erlass weiterer Satzungen}
 Das Studierendenparlament soll unverzüglich nach seiner Konstituierung spätestens aber bis zum 31.12.2013 eine Finanzordnung und eine Beitragsordnung erlassen.
 
 Die Fachschaften sollen unverzüglich nach Konstituierung des Fachschaftsvorstands spätestens aber bis zum 31.12.2013 eine Fachschaftsordnung erlassen.
