--- a/wahl-abstimmungsordnung/document.core.tex
+++ b/wahl-abstimmungsordnung/document.core.tex
@@ -8,10 +8,10 @@
 
 \begin{jurdoc}
 
-\Paragraph{title={Geltungsbereich}}\label{wahl:geltungsbereich}
+\jurparagraph{Geltungsbereich}\label{wahl:geltungsbereich}
 Diese Satzung regelt die Wahlen zum Studierendenparlament und den Fachschaftsvorständen, die Urabstimmung, sowie die Wahlen zu weiteren Organen der Studierendenschaft, sofern eine Satzung dies vorsieht.
 
-\Paragraph{title={Wahlsystem}}\label{wahl:wahlsystem}
+\jurparagraph{Wahlsystem}\label{wahl:wahlsystem}
 Das Studierendenparlament wird nach Listen, welche aufgrund gültiger Wahlvorschläge aufgestellt werden, gewählt.
 
 Bei der Wahl des Studierendenparlament hat jede Wahlberechtigte
@@ -24,25 +24,25 @@ Die Fachschaftsvorstände werden in Persönlichkeitswahl von den Fachschaftsmitg
 
 Bei der Wahl der Fachschaftsvorstände hat jede Wählerin so viele Stimmen wie Fachschaftssprecherinnen zu wählen sind. Auf eine Kandidatin dürfen dabei maximal zwei Stimmen kumuliert werden.
 
-\Paragraph{title={Urabstimmung}}\label{wahl:urabstimmung}
+\jurparagraph{Urabstimmung}\label{wahl:urabstimmung}
 Für die Urabstimmung gelten die Regelungen zur Durchführung der Wahlen sinngemäß.
 
 Die Urabstimmung findet spätestens während der nächsten Wahl zum Studierendenparlament statt. Der Antrag auf Urabstimmung kann den Zeitraum für die Urabstimmung beinhalten. Dabei muss die Einhaltung der Fristen gewährleistet sein.
 
-\Paragraph{title={Wahlberechtigung und Wählbarkeit}}\label{wahl:wahlberechtigung}
+\jurparagraph{Wahlberechtigung und Wählbarkeit}\label{wahl:wahlberechtigung}
 
 Wahlberechtigt sind alle Mitglieder, die im Wählerverzeichnis eingetragen sind.
 
 Wählbar sind alle Mitglieder, welche in einem gültigen Wahlvorschlag aufgeführt sind. Mitglieder des Wahlausschusses sowie des Ältestenrates dürfen in keinen Wahlvorschag aufgenommen werden.
 
-\Paragraph{title={Wahltermin}}\label{wahl:walhtermin}
+\jurparagraph{Wahltermin}\label{wahl:walhtermin}
 Die Wahlen sollen jährlich im Sommersemester parallel zur Wahl der studentischen Senatsmitglieder des KIT stattfinden.
 
 Das Studierendenparlament legt Termin und Dauer der Wahlen fest. Der Wahlzeitraum besteht aus wenigstens drei und höchstens fünf aufeinanderfolgenden Tagen. Die Wahlen dürfen nicht in den ersten drei Vorlesungswochen oder in der letzten Vorlesungswoche des Semesters stattfinden.
 
 In der Regel finden die Wahlen zum Studierendenparlament und den Fachschaftsvorständen zeitgleich statt.
 
-\Paragraph{title={Wahlausschuss}}\label{wahl:wahlausschuss}
+\jurparagraph{Wahlausschuss}\label{wahl:wahlausschuss}
 Das Studierenenparlament wählt spätestens 48 Tage vor dem ersten Wahltag bzw. spätestens 27 Tage vor dem ersten Tag der Urabstimmung einen aus vier Personen bestehenden Wahlausschuss.
 
 Der Wahlausschuss wählt eine Vorsitzende sowie eine Stellvertreterin aus seiner Mitte.
@@ -61,7 +61,7 @@ Der Wahlausschuss ist zuständig für
     \item die Einhaltung demokratischer Regeln.
 \end{enumerate}
 
-\Paragraph{title={Bekanntmachung der Wahlen}}\label{wahl:bekanntmachung-wahl}
+\jurparagraph{Bekanntmachung der Wahlen}\label{wahl:bekanntmachung-wahl}
 Der Wahlausschuss macht die Wahl spätestens 42 Tage vor dem ersten Wahltag bekannt.
 
 Die Bekanntmachung enthält:
@@ -80,7 +80,7 @@ Die Bekanntmachung enthält:
 
 Die Bekanntmachung ist nicht vor Ende der Wahl zu entfernen.
 
-\Paragraph{title={Bekanntmachung der Urabstimmung}}\label{wahl:bekanntmachung-ua}
+\jurparagraph{Bekanntmachung der Urabstimmung}\label{wahl:bekanntmachung-ua}
 Der Wahlausschuss macht die Urabstimmung spätestens 21 Tage vor dem ersten Wahltag bekannt.
 
 Die Bekanntmachung enthält:
@@ -96,7 +96,7 @@ Die Bekanntmachung enthält:
 
 Die Bekanntmachung ist nicht vor Ende der Urabstimmung zu entfernen.
 
-\Paragraph{title={Wählerverzeichnis}}\label{wahl:wählernverzeichnis}
+\jurparagraph{Wählerverzeichnis}\label{wahl:wählernverzeichnis}
 
 Alle Wahlberechtigten sind in ein Wählerverzeichnis in Listenform einzutragen. Die Aufstellung des Wählerverzeichnisses obliegt dem  Wahlausschuss. Es kann im Wahlverfahren auch in elektronischer Form  verwendet werden.
 
@@ -120,7 +120,7 @@ Das Wählerverzeichnis ist spätestens am 14. Tag nach Bekanntmachung der Wahl b
 \end{enumerate}
 vom Wahlausschuss zu beurkunden.
 
-\Paragraph{title={Änderung des Wählerverzeichnisses}}
+\jurparagraph{Änderung des Wählerverzeichnisses}
 Das Wählerverzeichnis kann bis zum Ablauf der Einsichtsfrist vom Wahlausschuss berichtigt oder ergänzt werden.
 
 Die  Einsichtsberechtigten gemäß \ref{wahl:wählerverzeichnis:auflegung}  können während der Dauer der Auflegung des Wählerverzeichnisses dessen  Berichtigung oder Ergänzung beantragen, wenn sie diese für unrichtig  oder unvollständig halten. Der Antrag ist schriftlich beim Wahlausschuss  zu stellen. Die erforderlichen Beweise sind vom Antragsteller  beizubringen. Der Wahlausschuss entscheidet spätestens am 14. Tag nach Bekanntmachung der Wahl bzw. Urabstimmung  über die Anträge. Die Entscheidung ist der Antragstellerin und ggf. der  Betroffenen mitzuteilen. \label{wahl:aenderungwv:aenderungen}
@@ -132,7 +132,7 @@ Das  Wählerverzeichnis kann bis zum 1. Tag vor dem ersten Wahltag vom  Wahlauss
 
 Änderungen sind als solche kenntlich zu machen und mit Datum und Unterschrift zu versehen.
 
-\Paragraph{title={Wahlvorschläge}}\label{wahl:wahlvorschlaege}
+\jurparagraph{Wahlvorschläge}\label{wahl:wahlvorschlaege}
 
 Die Wahlvorschläge sind getrennt für die Wahlen zum Studierendenparlament und den Fachschaftsvorständen spätestens am 24. Tag vor dem ersten Wahltag bis 15:00 Uhr beim Wahlausschuss einzureichen.
 
@@ -179,7 +179,7 @@ Die Zurücknahme von Wahlvorschlägen, Unterschriften unter einem Wahlvorschlag 
 
 Etwaige Mängel am Wahlvorschlag sind der Vertreterin des Wahlvorschlages unverzüglich, spätestens aber am Tag nach Ablauf der Einreichungsfrist mitzuteilen. Danach besteht bis zum Beginn der Wahlausschusssitzung nach \ref{wahl:zulassung:sitzung} die Gelegenheit, die Mängel zu beseitigen. Das Fehlen von erforderlichen Unterschriften gilt nicht als Mangel im oberen Sinne. Diese können nach Ablauf der Einreichungsfrist nicht nachgeholt werden.
 
-\Paragraph{title={Zulassung der Wahlvorschläge}}\label{wahl:zulassung}
+\jurparagraph{Zulassung der Wahlvorschläge}\label{wahl:zulassung}
 Spätestens am 21. Tag vor dem ersten Wahltag beschließt der Wahlausschuss in einer Sitzung über die Zulassung der eingereichten Wahlvorschläge. \label{wahl:zulassung:sitzung}
 
 Zurückzuweisen sind Wahlvorschläge,
@@ -207,7 +207,7 @@ Wird ein Wahlvorschlag zurückgewiesen oder eine Kandidatin gestrichen, so sind 
 
 Der Wahlausschuss bestimmt unter den Wahlvorschlägen zum Studierendenparlament per Losziehung eine Reihenfolge.
 
-\Paragraph{title={Bekanntmachung der Wahlvorschläge }}\label{wahl:bekanntmachungvorschläge}
+\jurparagraph{Bekanntmachung der Wahlvorschläge}\label{wahl:bekanntmachungvorschläge}
 Der Wahlausschuss macht die Wahlvorschläge spätestens am 14. Tag vor dem ersten Wahltag bekannt.
 Die Bekanntmachung enthält:
 \begin{enumerate}
@@ -224,7 +224,7 @@ Die Bekanntmachung enthält:
 Die Bekanntmachung ist nicht vor Ende der Wahl zu entfernen.
 
 
-\Paragraph{title={Briefwahl}}\label{wahl:briefwahl}
+\jurparagraph{Briefwahl}\label{wahl:briefwahl}
 Eine Wahlberechtigte, die zum Zeitpunkt der Wahl verhindert ist, die Abstimmung vor Ort vorzunehmen, erhält auf Antrag in Schriftform beim Wahlausschuss für die Wahl einen Wahlschein und die Briefwahlunterlagen, bestehend aus einem Stimmzettel für jede Wahl, einem Wahlumschlag und einem Wahlbriefumschlag. Die Ausgabe der Wahlscheine und der Briefwahlunterlagen ist im Wählerverzeichnis zu vermerken.
 
 Der Wahlumschlag und der Wahlbriefumschlag müssen als solcher gekennzeichnet sein. Weiter muss der Wahlbriefumschlag die Adresse der Wählerin als Absender und die Adresse des Wahlausschusses als Empfänger ausweisen.\\
@@ -244,7 +244,7 @@ Wahlscheine und Wahlumschläge werden gezählt und die Wahlscheine mit den Eintr
 
 Die Auszählung der per Briefwahl abgegebenen Stimmen erfolgt entsprechend der Auszählung einer Urne gemäß \ref{wahl:auszaehlung}. Haben weniger als zehn Wählerinnen ihre Stimme per Briefwahl abgegeben, so bestimmt der Wahlausschuss eine Urne, zu der die Stimmzettel aus der Briefwahl hinzugefügt werden.
 
-\Paragraph{title={Stimmzettel }}\label{wahl:stimmzettel}
+\jurparagraph{Stimmzettel}\label{wahl:stimmzettel}
 
 Der Stimmzettel enthält:
 \begin{enumerate}
@@ -255,7 +255,7 @@ Der Stimmzettel enthält:
     \item den Wahlzeitraum.
 \end{enumerate}
 
-\Paragraph{title={Wahlurnen und Urnenbuch}}\label{wahl:urnen}
+\jurparagraph{Wahlurnen und Urnenbuch}\label{wahl:urnen}
 Der Wahlausschuss legt vor Beginn der Wahl die Anzahl der Wahlurnen fest, versiegelt die Urnen und kennzeichnet sie eindeutig und deutlich sichtbar.
 
 Die Urnen sind so einzurichten, dass die eingeworfenen Stimmzettel nicht vor Ende der Wahl entnommen werden können
@@ -275,12 +275,12 @@ Zu jeder Urne ist ein Urnenbuch zu führen. Dieses wird vom Wahlausschuss ausgeg
 
 Die Urnen dürfen das Gelände des KIT nicht verlassen; Ausnahmen regelt der Wahlausschuss. Erstreckt sich eine Wahl oder Abstimmung über mehrere Tage, so sind die Urnen über die Nacht von 20:00 bis 7:00 Uhr unter sicherer Verwahrung zu halten. In dieser Zeit ist keine Wahlhandlung zulässig.
 
-\Paragraph{title={ Wahlhelferinnen }}\label{wahl:wahlhelferinnen}
+\jurparagraph{Wahlhelferinnen}\label{wahl:wahlhelferinnen}
 Der Wahlausschuss bestellt Wahlhelferinnen zur Durchführung der Wahl. Der Wahlausschuss belehrt die Wahlhelferinnen über ihre Pflichten. Der Wahlausschuss kann die Bestellung und Belehrung von Wahlhelferinnen an die Wahlleiterinnen gemäß §~40 Absatz~2 delegieren.
 
 Die Wahlhelferinnen nehmen ihr Amt unparteiisch und gewissenhaft wahr. Sie enthalten sich während der Ausübung ihres Amtes jeder parteilichen Betätigung. Dazu gehört auch das Tragen von Parteiabzeichen und "~parolen.
 
-\Paragraph{title={ Wahlhandlung }}\label{wahl:wahlhandlung}
+\jurparagraph{Wahlhandlung}\label{wahl:wahlhandlung}
 Jede Urne wird ständig von einer verantwortlichen Wahlhelferin sowie wenigstens einer weiteren Wahlhelferin betreut. Sind unter den Wahlhelferinnen Kandidatinnen, so müssen diese von unterschiedlichen Wahlvorschlägen stammen. Die Wahlhelferinnen sind für die Einhaltung der Wahl- und Abstimmungsordnung an dieser Wahlurne zuständig und dienen als Ansprechpartnerinnen für die Wählerinnen. Sie sind zur gewissenhaften und unparteiischen Auskunft verpflichtet.
 
 Jede Wahlberechtigte kann ihr Stimmrecht für jede Wahl nur einmal und persönlich wahrnehmen. Wahlberechtigte, die durch körperliche Gebrechen gehindert sind, ihre Stimme allein abzugeben, können sich der Hilfe einer Vertrauensperson bedienen.
@@ -295,7 +295,7 @@ Beim Einwurf der Stimmzettel markieren die Wahlhelferinnen im Urnenbuch sowie im
 
 Im Umkreis von zehn Metern um Wahlurnen ist jede Beeinflussung der Wählerinnen untersagt; es dürfen nur vom Wahlausschuss genehmigte Informationen ausgelegt werden.
 
-\Paragraph{title={ Ende der Wahl, Auszählung }}\label{wahl:auszaehlung}
+\jurparagraph{Ende der Wahl, Auszählung}\label{wahl:auszaehlung}
 Die Urnen und Urnenbücher sind nach Ende des Abstimmungszeitraums unverzüglich dem Wahlausschuss zu übergeben.
 
 Die Auszählung soll direkt nach Ende des Abstimmungszeitraums spätestens aber am nächsten Werktag stattfinden.
@@ -327,7 +327,7 @@ Für jede Urne wird eine Niederschrift angefertigt. Diese enthält
     \item die Namen sowie die Unterschriften der Auszählungshelferinnen.
 \end{enumerate}
 
-\Paragraph{title={ Verteilung der Sitze und Mandate bei der Wahl zum Studierendenparlament }}\label{wahl:sitzverteilungstupa}
+\jurparagraph{Verteilung der Sitze und Mandate bei der Wahl zum Studierendenparlament}\label{wahl:sitzverteilungstupa}
 Bei der Wahl zum Studierendenparlament werden die auf die einzelnen Wahlvorschläge entfallenen Sitze nach dem Sainte-Laguë-Verfahren verteilt. Haben mehrere Listen die gleiche 25. Höchstzahl so entscheidet das von der Vorsitzenden des Wahlausschusses zu ziehende Los.
 
 Die bei der Wahl zum Studierendenparlament auf die einzelnen Wahlvorschläge entfallenen Mandate werden den in den Wahlvorschlägen aufgeführten Kandidatinnen in der Reihenfolge der von ihnen erreichten Stimmenzahlen zugeteilt. Bei Stimmgleichheit entscheidet die Reihenfolge der Benennung auf dem Wahlvorschlag.
@@ -336,14 +336,14 @@ Kandidatinnen, auf die kein Mandat entfällt, sind in der Reihenfolge der von ih
 
 Entfallen bei der Wahl zum Studierendenparlament auf einen Wahlvorschlag mehr Sitze als Kandidatinnen vorhanden sind, so bleiben die überzähligen Sitze unbesetzt.
 
-\Paragraph{title={ Besetzung der Fachschaftsvorstände }}\label{wahl:fsvorstaende}
+\jurparagraph{Besetzung der Fachschaftsvorstände}\label{wahl:fsvorstaende}
 Die Anzahl der Fachschaftssprecherinnen wird gemäß §~30 Absatz~3 der Organisationssatzung durch die Fachschaftsordnungen geregelt. Die Kandidatinnen mit den meisten Stimmen werden Fachschaftssprecherinnen und bilden den Fachschaftsvorstand.
 
 Kandidatinnen, welche nicht Teil des Fachschaftsvorstands werden, werden Ersatzleute in der Reihenfolge der von ihnen erziehlten Stimmenanzahl.
 
 Bei Stimmgleichheit entscheidet die Reihenfolge der Benennung auf dem Wahlvorschlag.
 
-\Paragraph{title={Feststellung des Wahlergebnisses, Wahlniederschrift }}\label{wahl:wahlniederschrift}
+\jurparagraph{Feststellung des Wahlergebnisses, Wahlniederschrift}\label{wahl:wahlniederschrift}
 Der Wahlausschuss fertigt eine Wahlniederschrift an. Diese hat insbesondere zu enthalten:
 \begin{enumerate}
     \item die Namen seiner Mitglieder,
@@ -361,7 +361,7 @@ Mit der Unterzeichnung der Wahlniederschrift ist das Ergebnis festgestellt.
 
 Im Anschluss an die Feststellung des Wahlergebnisses übergibt der Wahlausschuss dem Ältestenrat alle entstandenen Wahlunterlagen. Dieser hat die Wahlunterlagen zwei Monate lang aufzubewahren und dann zu vernichten. Die Vernichtung der Wahlunterlagen wird ausgesetzt, solange der Ältestenrat noch nicht über eine Anfechtung der Wahl entschieden hat.
 
-\Paragraph{title={Bekanntmachung des Wahlergebnisses }}\label{wahl:ergebnis}
+\jurparagraph{Bekanntmachung des Wahlergebnisses}\label{wahl:ergebnis}
 Nach der Feststellung gibt der Wahlausschuss das Wahlergebnis bekannt. Die Bekanntmachung enthält:
 \begin{enumerate}
     \item die Zahl der Wahlberechtigten,
@@ -375,10 +375,10 @@ Nach der Feststellung gibt der Wahlausschuss das Wahlergebnis bekannt. Die Bekan
 
 Der Wahlausschuss benachrichtigt mit der Bekanntmachung des Wahlergebnisses die gewählten Kandidatinnen.
 
-\Paragraph{title={Wahlanfechtung}}\label{wahl:wahlanfechtung}
+\jurparagraph{Wahlanfechtung}\label{wahl:wahlanfechtung}
 Jedes Mitglied der Studierendenschaft kann die Wahl nach Maßgabe des §~40 Absatz~4 der Organisationssatzung anfechten.
 
-\Paragraph{title={Berechnung der Fristen}}\label{wahl:fristen}
+\jurparagraph{Berechnung der Fristen}\label{wahl:fristen}
 Bei der Berechnung der Fristen werden nur Tage gezählt, die in der vom KIT-Senat beschlossenen Vorlesungszeit liegen.
 
 Fällt der letzte Tag einer Frist auf einen vorlesungsfreien Tag, so tritt an dessen Stelle der vorherige Vorlesungstag.
