--- a/vs-satzung/document.core.tex
+++ b/vs-satzung/document.core.tex
@@ -13,11 +13,11 @@
 % STUDIERENDENSCHAFT
 %
 \jursection{Studierendenschaft}
-\Paragraph{title=Studierendenschaft}
+\jurparagraph{Studierendenschaft}
 Die immatrikulierten Studierenden einschließlich der immatrikulierten Doktorandinnen des Karlsruher Instituts für Technologie (KIT) (Mitglieder) bilden gemäß § 65 Absatz 1 LHG die Studierendenschaft. Sie ist eine rechtsfähige Körperschaft des öffentlichen Rechts und als solche eine Gliedkörperschaft des KIT. Die Studierendenschaft arbeitet auf demokratischer Grundlage und wahrt nach den verfassungsrechtlichen Grundsätzen die weltanschauliche, religiöse und parteipolitische Neutralität.
 
 
-\Paragraph{ title = Aufgaben}\label{studierendenschaft:aufgaben}
+\jurparagraph{Aufgaben}\label{studierendenschaft:aufgaben}
 
 Die Studierendenschaft verwaltet ihre Angelegenheiten im Rahmen der gesetzlichen Bestimmungen selbst. Sie hat unbeschadet der Zuständigkeit der Hochschule und des Studentenwerks die folgenden Aufgaben
 \begin{enumerate}
@@ -29,7 +29,7 @@ Die Studierendenschaft verwaltet ihre Angelegenheiten im Rahmen der gesetzlichen
 \item die Pflege und der Ausbau der überregionalen und internationalen Studierendenbeziehungen.
 \end{enumerate}
 
-\Paragraph{title={Rechte und Pflichten der Mitglieder}}\label{studierendenschaft:mitglieder}
+\jurparagraph{Rechte und Pflichten der Mitglieder}\label{studierendenschaft:mitglieder}
 
 Jedes Mitglied hat das aktive Wahlrecht.
 
@@ -42,7 +42,7 @@ Jeweils 25 Mitglieder haben ein Antragsrecht an die Organe nach \ref{organe:orga
 
 Jedes Mitglied hat das Recht der Beschwerde gegen Maßnahmen und Beschlüsse der Organe der Studierendenschaft, insbesondere mit der Behauptung, es liege ein Verstoß gegen die Organisationssatzung vor. Beschwerden sind schriftlich an den Ältestenrat zu richten. \label{studierendenschaft:mitglieder:beschwerden}
 
-\Paragraph{ title = Organe der Studierendenschaft}
+\jurparagraph{Organe der Studierendenschaft}
 
 Die Organe der Studierendenschaft auf zentraler Ebene sind \label{organe:organe}
 \begin{enumerate}
@@ -64,13 +64,13 @@ Die Organe der Studierendenschaft tagen grundsätzlich öffentlich. Die Geschäf
 
 \jursection{Urabstimmung}
 
-\Paragraph{title=Aufgaben}
+\jurparagraph{Aufgaben}
 Die Urabstimmung entscheidet über grundlegende Fragen der Studierendenschaft. Sie kann über die Auflösung des Studierendenparlaments sowie über Änderungen der Organisationssatzung entscheiden.
 
-\Paragraph{title=Stimmrecht}
+\jurparagraph{Stimmrecht}
 Jedes Mitglied ist bei der Urabstimmung stimmberechtigt.
 
-\Paragraph{title=Zustandekommen}\label{urabstimmung:zustandekommen}
+\jurparagraph{Zustandekommen}\label{urabstimmung:zustandekommen}
 Die Urabstimmung findet statt
 \begin{enumerate}
 \item auf Beschluss des Studierendenparlaments,
@@ -78,14 +78,14 @@ Die Urabstimmung findet statt
 \item auf Antrag der Mitglieder; zu diesem Zweck muss ein entsprechender Antrag von mindestens 5~\% der Mitglieder unterzeichnet sein; der Antrag ist schriftlich beim Ältestenrat einzureichen; dieser beantragt nach Überprüfung der Voraussetzungen unverzüglich eine Sitzung des Studierendenparlaments zur Wahl des Wahlausschusses. \label{urabstimmung:zustandekommen:mitglieder}
 \end{enumerate}
 
-\Paragraph{title=Organisation und Ablauf}\label{urabstimmung:orga}
+\jurparagraph{Organisation und Ablauf}\label{urabstimmung:orga}
 
 Findet gemäß \ref{urabstimmung:zustandekommen} eine Urabstimmung statt, so wählt das Studierendenparlament unverzüglich einen Wahlausschuss für die Durchführung der Urabstimmung; dazu ist der Beschluss nach \ref{urabstimmung:zustandekommen} Nummer \ref{urabstimmung:zustandekommen:fsk} bzw. die Erfüllung  der Bedingungen nach \ref{urabstimmung:zustandekommen}  Nummer \ref{urabstimmung:zustandekommen:mitglieder} dem Präsidium des Studierendenparlaments unverzüglich mitzuteilen.
 
 Es gelten die Vorschriften des \ref{grundsaetze:wahlen}. Darüber hinaus regelt die Wahl- und Abstimmungsordnung weitere Einzelheiten.
 
 
-\Paragraph{title=Beschlüsse}
+\jurparagraph{Beschlüsse}
 
 Beschlüsse der Urabstimmung sind gültig und bindend für die Organe der Studierendenschaft, wenn mindestens ein Sechstel aller Mitglieder sowie die Mehrheit der an der Abstimmung teilnehmenden Mitglieder zugestimmt haben.
 
@@ -99,17 +99,17 @@ Beschlüsse der Urabstimmung heben widersprechende Beschlüsse der Vollversammlu
 
 \jursection{Vollversammlung}
 
-\Paragraph{title=Aufgaben}
+\jurparagraph{Aufgaben}
 
 Die Vollversammlung ist ein beschließendes Organ der Studierendenschaft und dient der Information der Mitglieder.
 
 Die Vollversammlung kann nicht über Änderungen der Organisationssatzung sowie Erlass und Änderung weiterer Satzungen, der Finanzordnung, der Beitragsordnung und des Haushalts- oder Wirtschaftsplans beschließen.
 
-\Paragraph{title=Stimm- und Antragsrecht}
+\jurparagraph{Stimm- und Antragsrecht}
 
 Jedes Mitglied ist auf der Vollversammlung stimm- und antragsberechtigt.
 
-\Paragraph{title=Zustandekommen} \label{vv:zustandekommen}
+\jurparagraph{Zustandekommen} \label{vv:zustandekommen}
 
 Eine Vollversammlung findet statt
 \begin{enumerate}
@@ -119,7 +119,7 @@ Eine Vollversammlung findet statt
 \end{enumerate}
 
 
-\Paragraph{title=Organisation und Ablauf}\label{vv:organisation}
+\jurparagraph{Organisation und Ablauf}\label{vv:organisation}
 
 Die Organisation der Vollversammlung obliegt dem Ältestenrat; er kann den Vorstand damit beauftragen.
 
@@ -137,7 +137,7 @@ Das Studierendenparlament kann eine Geschäftsordnung für die Vollversammlung b
 
 
 
-\Paragraph{title=Beschlüsse}
+\jurparagraph{Beschlüsse}
 
 Beschlüsse der Vollversammlung sind gültig und wirksam, wenn mindestens 5~\% aller Mitglieder sowie die Mehrheit der an der Abstimmung teilnehmenden Mitglieder zugestimmt haben. Erreicht ein Beschluss dieses Quorum nicht, so behandelt das Studierendenparlament diesen auf seiner nächsten Sitzung.
 
@@ -152,7 +152,7 @@ Beschlüsse der Vollversammlung sind ausgesetzt, sobald eine Urabstimmung dazu b
 
 \jursection{Studierendenparlament}
 
-\Paragraph{title=Aufgaben}
+\jurparagraph{Aufgaben}
 Das Studierendenparlament ist das beschließende Organ der Studierendenschaft; es ist das legislative Organ gemäß §~65~a Absatz~3 Satz~2~LHG.
 
 Das Studierendenparlament ist insbesondere zuständig für
@@ -171,7 +171,7 @@ Das Studierendenparlament ist insbesondere zuständig für
 \end{enumerate}
 
 
-\Paragraph{title={Zusammensetzung, Wahl}}\label{stupa:zusammensetzung}
+\jurparagraph{Zusammensetzung, Wahl}\label{stupa:zusammensetzung}
 
 Das Studierendenparlament besteht aus 25 Abgeordneten, die von den Mitgliedern der Studierendenschaft nach den Grundsätzen der Verhältniswahl allgemein, gleich, frei, geheim und unmittelbar gewählt werden. Es gelten die Vorschriften des \ref{grundsaetze:wahlen}. Darüber hinaus regelt die Wahl- und Abstimmungsordnung weitere Einzelheiten.
 
@@ -188,7 +188,7 @@ Bei Ausscheiden einer Abgeordneten rückt die Nächste auf der Liste nach. Ist d
 Die Amtsperiode des Studierendenparlaments beginnt in der Regel am 1. Oktober und endet am darauffolgenden 30. September.
 
 
-\Paragraph{title={Organisation und Ablauf}}
+\jurparagraph{Organisation und Ablauf}
 
 Das Studierendenparlament gibt sich eine Geschäftsordnung.
 
@@ -216,7 +216,7 @@ Die Abgeordneten haben das Recht, Anfragen an den Vorstand zu stellen. Anfragen 
 Die Abgeordneten haben das Recht, Einsicht in die Unterlagen des Vorstands zu verlangen. Der Vorstand hat das Verlangen binnen zwei Wochen zu erfüllen, indem er die Unterlagen in seinen Räumen zur Einsicht vorlegt. Enthalten die Unterlagen personenbezogene Daten, so Bedarf die Einsicht der Zustimmung der betroffenen Personen.
 
 
-\Paragraph{title=Beschlüsse}\label{stupa:beschluesse}
+\jurparagraph{Beschlüsse}\label{stupa:beschluesse}
 
 Das Studierendenparlament ist beschlussfähig, wenn mehr als die Hälfte der Mitglieder des Studierendenparlaments anwesend sind. Wird zu Beginn oder während der Sitzung festgestellt, dass das Studierendenparlament nicht beschlussfähig ist, so wird die Sitzung vertagt. Das Studierendenparlament ist auf der nächsten Sitzung in Bezug auf die vertagten Punkte, unbeschadet \refPar{stupa:beschluesse:zweidrittel}, beschlussfähig.
 
@@ -235,7 +235,7 @@ Für folgende Beschlüsse ist eine Zweidrittelmehrheit der Stimmberechtigten des
 
 \jursection{Vorstand}
 
-\Paragraph{title=Aufgaben}
+\jurparagraph{Aufgaben}
 
 Der Vorstand ist das ausführende Organ der Studierendenschaft; er ist das exekutive Kollegialorgan gemäß §~65~a Absatz~3 Satz~3~LHG.
 
@@ -248,7 +248,7 @@ Der Vorstand vertritt die Studierendenschaft in der landesweiten Vertretung der 
 Der Vorstand kann sich eine Geschäftsordnung geben.
 
 
-\Paragraph{title={Zusammensetzung, Wahl}} \label{vorstand:zusammensetzung}
+\jurparagraph{Zusammensetzung, Wahl} \label{vorstand:zusammensetzung}
 
 Der Vorstand der Studierendenschaft besteht in der Regel aus folgenden Referaten \label{vorstand:zusammensetzung:regel}
 \begin{enumerate}
@@ -290,10 +290,10 @@ Ist das Chancengleichheitsreferat durch einen Mann besetzt, muss eine Frau zur U
 
 \jursection{Erweiterter Vorstand}
 
-\Paragraph{title=Aufgaben}\label{erweitertervorstand:aufgaben}
+\jurparagraph{Aufgaben}\label{erweitertervorstand:aufgaben}
 Der erweiterte Vorstand unterstützt den Vorstand bei seiner Arbeit. Er ist diesem rechenschaftspflichtig.
 
-\Paragraph{title=Wahl} \label{erweitertervorstand:wahl}
+\jurparagraph{Wahl} \label{erweitertervorstand:wahl}
 
 Die Mitglieder des erweiterten Vorstands werden vom Vorstand gewählt. Diese müssen vom Studierendenparlament einzeln bestätigt werden, einem Antrag auf geheime Abstimmung muss stattgegeben werden.
 
@@ -313,7 +313,7 @@ Die Mitglieder des erweiterten Vorstands scheiden aus
 
 \jursection{Ältestenrat}
 
-\Paragraph{title=Aufgaben}\label{aera:aufgaben}
+\jurparagraph{Aufgaben}\label{aera:aufgaben}
 
 Der Ältestenrat ist die Schlichtungskommission gemäß §~65~a Absatz~9~LHG. Darüber hinaus hat er folgende Aufgaben: \label{aera:aufgaben:allgemein}
   \begin{enumerate}
@@ -337,7 +337,7 @@ Eingaben an den Ältestenrat sind an die Vorsitzende zu richten. Sie versieht di
 Ist der Ältestenrat mit zwei oder weniger Mitgliedern besetzt, so übernimmt das Präsidium des Studierendenparlaments im Einvernehmen mit den amtierenden Mitgliedern des Ältestenrats dessen Aufgaben nach \refPar{aera:aufgaben:allgemein} Nummer \ref{aera:aufgaben:vv} und \ref{aera:aufgaben:ua}.
 
 
-\Paragraph{title=Zusammensetzung}
+\jurparagraph{Zusammensetzung}
 
 Der Ältestenrat besteht aus fünf Mitgliedern. Sie werden vom Studierendenparlament auf ein Jahr gewählt. Die Amtszeiten der einzelnen Mitglieder beginnen entweder am 1. April oder 1. Oktober; sie sollen nicht alle am gleichen Datum beginnen.
 
@@ -355,14 +355,14 @@ Mitglieder des Ältestenrats scheiden aus
 Bei vorzeitigem Ausscheiden eines Mitglieds erfolgt eine Nachwahl durch das Studierendenparlament für den Rest der Amtszeit.
 
 
-\Paragraph{title=Organisation}
+\jurparagraph{Organisation}
 
 Der Ältestenrat wählt sich seine Vorsitzende aus seiner Mitte.
 
 Das Studierendenparlament kann auf Vorschlag des Ältestenrats eine Geschäftsordnung für den Ältestenrat beschließen. Ist eine solche nicht vorhanden, so findet die Ge\-schäfts\-ord\-nung des Studierendenparlaments sinngemäß Anwendung.
 
 
-\Paragraph{title=Beschlüsse}
+\jurparagraph{Beschlüsse}
 
 Erklärt der Ältestenrat einen Beschluss eines Organs der Studierendenschaft für satzungswidrig, so ist dieser aufgehoben. Die Aufhebung eines Beschlusses ist schriftlich zu begründen und dem jeweiligen Organ mitzuteilen. Ein Mitglied des Ältestenrats soll dem jeweiligen Organ für Rückfragen zur Verfügung stehen.
 
@@ -378,18 +378,18 @@ Erhält der Ältestenrat den Antrag auf Wiederanerkennung eines Sitzes im Studie
 
 \jursection{Fachschaften}
 
-\Paragraph{title=Aufgaben} \label{fachschaften:aufgaben}
+\jurparagraph{Aufgaben} \label{fachschaften:aufgaben}
 
 Die Organe der Fachschaft nehmen die fakultätsbezogenen Studienangelegenheiten und Aufgaben im Sinne des \ref{studierendenschaft:aufgaben} auf Fakultätsebene wahr.
 
-\Paragraph{title={Gliederung, Mitgliedschaft}}\label{fachschaften:gliederung}
+\jurparagraph{Gliederung, Mitgliedschaft}\label{fachschaften:gliederung}
 
 Die Studierenden einer Fakultät bilden eine Fachschaft.
 
 Die Fachschaften regeln ihre Angelegenheiten durch Fachschaftsordnungen selbst. Diese sollen dem Ältestenrat zur Prüfung vorgelegt werden. Fachschaftsordnungen sind vom Studierendenparlament als Satzungen zu beschließen.
 
 
-\Paragraph{title=Organe}
+\jurparagraph{Organe}
 
 Organe der Fachschaft sind
   \begin{enumerate}
@@ -400,7 +400,7 @@ Organe der Fachschaft sind
 Die Fachschaftsordnung kann weitere Organe vorsehen.
 
 
-\Paragraph{title=Fachschaftsvorstand}\label{fs:vorstand}
+\jurparagraph{Fachschaftsvorstand}\label{fs:vorstand}
 
 Der Fachschaftsvorstand ist das ausführende Organ der Fachschaft. Näheres regelt die Fachschaftsordnung.
 
@@ -429,7 +429,7 @@ Die Mitglieder des Fachschaftsvorstands haben das Recht, Anfragen an den  Vorsta
 Der Fachschaftsvorstand kann eine Person wählen, die mit beratender Stimme an den Sitzungen des Fakultätsrats teilnimmt.
 
 
-\Paragraph{title=Fachschaftsversammlung}\label{fachschaft:vv}
+\jurparagraph{Fachschaftsversammlung}\label{fachschaft:vv}
 
 Die Fachschaftsversammlung ist das beschließende Organ der Fachschaft.
 
@@ -453,7 +453,7 @@ Die Fachschaftsversammlung kann mit 10~\% aller Stimmen und Zweidrittel der abge
 
 \jursection{Fachschaftenkonferenz}
 
-\Paragraph{title=Aufgaben} \label{fsk:aufgaben}
+\jurparagraph{Aufgaben} \label{fsk:aufgaben}
 
 Die Fachschaftenkonferenz ist ein Organ der Studierendenschaft. Sie vertritt die Interessen der Fachschaften  gegenüber dem Studierendenparlament und dem Vorstand.
 
@@ -465,7 +465,7 @@ Abweichend von \refPar{fsk:aufgaben:einspruch} kann das Studierendenparlament ei
 
 Die Fachschaftenkonferenz wählt Vertreterinnen in den Finanzausschuss nach \ref{haushalt:finanzausschuss:wahl}.
 
-\Paragraph{title={Zusammensetzung, Stimmverteilung}}
+\jurparagraph{Zusammensetzung, Stimmverteilung}
 
 Die Fachschaften entsenden Vertreterinnen in die Fachschaftenkonferenz. Die Vertreterinnen jeder Fachschaft werden vom Fachschaftsvorstand gewählt und müssen von der Fachschaftsversammlung bestätigt werden.\label{fsk:zusammensetzung:vertreter}
 
@@ -483,7 +483,7 @@ Die Verteilung der Stimmen erfolgt unter Beachtung der Anzahl der Studierenden. 
 \item über 2500 Studierenden haben neun Stimmen.
 \end{itemize}
 
-\Paragraph{title=Organisation}\label{fsk:organisation}
+\jurparagraph{Organisation}\label{fsk:organisation}
 
 Die Fachschaftenkonferenz gibt sich eine Geschäftsordnung.
 
@@ -505,10 +505,10 @@ Die Fachschaftenkonferenz tagt mindestens einmal pro Vorlesungsmonat.
 
 \jursection{Arbeitskreise und Hochschulgruppen}
 
-\Paragraph{title=Arbeitskreise}
+\jurparagraph{Arbeitskreise}
 Zur langfristigen Bearbeitung konkreter Aufgaben oder Teile der Aufgaben nach \ref{studierendenschaft:aufgaben} kann das Studierendenparlament Arbeitskreise der Studierendenschaft einrichten. Diese sind dem Studierendenparlament weisungsgebunden und berichten diesem regelmäßig über ihre Arbeit.
 
-\Paragraph{title=Hochschulgruppen}
+\jurparagraph{Hochschulgruppen}
 Studentische Gruppen haben die Möglichkeit, sich als Hochschulgruppe der Studierendenschaft beim Vorstand registrieren zu lassen. Voraussetzung sind eine Vereinbarkeit des Zwecks der Hochschulgruppe mit den Aufgaben der Studierendenschaft, dass der Schwerpunkt der Arbeit der Gruppe am KIT liegt und dass die Gruppe selbstlos tätig ist und nicht in erster Linie eigenwirtschaftliche Zwecke verfolgt. Näheres regelt eine gesonderte Satzung.
 
 %
@@ -517,7 +517,7 @@ Studentische Gruppen haben die Möglichkeit, sich als Hochschulgruppe der Studie
 
 \jursection{Haushalt}
 
-\Paragraph{title=Allgemeines}
+\jurparagraph{Allgemeines}
 
 Das Studierendenparlament hat die Verfügungsgewalt über das Vermögen der Studierendenschaft.
 
@@ -532,7 +532,7 @@ Der Vorstand legt zum Ende des Geschäftsjahres dem Studierendenparlament und de
 Der Haushalts- oder Wirtschaftsplan und die Bilanz werden veröffentlicht.
 
 
-\Paragraph{title=Haushalts- oder Wirtschaftsplan} \label{haushalt:haushaltsplan}
+\jurparagraph{Haushalts- oder Wirtschaftsplan} \label{haushalt:haushaltsplan}
 
 Der Vorstand legt dem Studierendenparlament spätestens bis zum 1.~Dezember einen Entwurf des Haushalts- oder Wirtschaftsplans für das folgende Geschäftsjahr vor.
 
@@ -543,7 +543,7 @@ Außer- und überplanmäßige Ausgaben müssen durch einen Nachtragshaushalt bes
 Über das Eröffnen und Schließen von Geschäftsfeldern, sowie grundsätzliche Veränderungen der Wirtschaftsbetriebe, entscheidet das Studierendenparlament. Die Gründung von und die Beteiligung an wirtschaftlichen Unternehmen bedarf darüber hinaus der Zustimmung des Präsidiums des KIT.
 
 
-\Paragraph{title=Finanzausschuss} \label{haushalt:finanzauschuss}
+\jurparagraph{Finanzausschuss} \label{haushalt:finanzauschuss}
 
 Der Finanzausschuss unterstützt die Rechnungsprüfung nach §~65~b Absatz~3 Satz~2 LHG. Zusätzlich führt der Finanzausschuss eigene Prüfungen durch. Es erfolgt mindestens eine Prüfung im Semester; über das Ergebnis der Prüfung ist dem Studierendenparlament und der Fachschaftenkonferenz zu berichten. Näheres regelt die Finanzordnung.
 
@@ -556,7 +556,7 @@ Der  Finanzausschuss besteht aus drei durch das Studierendenparlament und  zwei 
 
 \jursection{Grundsätze und Organisatorisches}
 
-\Paragraph{title=Wahlen und Abstimmungen}\label{grundsaetze:wahlen}
+\jurparagraph{Wahlen und Abstimmungen}\label{grundsaetze:wahlen}
 
 Wahlen und Abstimmungen der Studierendenschaft finden nach demokratischen Grundsätzen statt. Die Einhaltung demokratischer Regeln ist durch eine geeignete Organisationsweise zu gewährleisten.
 
@@ -568,7 +568,7 @@ Jedes Mitglied kann eine Wahl oder Abstimmung beim Ältestenrat innerhalb einer 
 
 Wahlen und Urabstimmungen finden während der vom KIT-Senat beschlossenen Vorlesungszeit an direkt aufeinander folgenden Werktagen statt.
 
-\Paragraph{title=Mehrheiten}
+\jurparagraph{Mehrheiten}
 In der Regel ist ein Antrag angenommen, wenn ihm mehr anwesende Stimmberechtigte zustimmen, als ihn ablehnen (relative Mehrheit). Folgende Abweichungen von dieser Regel können in Satzungen oder Geschäftsordnungen vorgesehen sein:
 \begin{enumerate}
 \item Absolute Mehrheit, d.\,h. mehr Ja-Stimmen als die Hälfte der Anzahl der Stimmberechtigten,
@@ -578,7 +578,7 @@ In der Regel ist ein Antrag angenommen, wenn ihm mehr anwesende Stimmberechtigte
 Als Anzahl der abgegebenen Stimmen gilt die Summe aus Ja-Stimmen, Nein-Stimmen, Enthaltungen und ungültigen Stimmen.
 
 
-\Paragraph{title=In-Kraft-Treten}\label{grundsaetze:inkrafttreten}
+\jurparagraph{In-Kraft-Treten}\label{grundsaetze:inkrafttreten}
 Diese Satzung tritt am Tage nach ihrer Bekanntmachung in den Amtlichen Bekanntmachungen des KIT in Kraft.
 
 
